--- a/BS/style.css
+++ b/BS/style.css
@@ -22,14 +22,16 @@ body{
     background-color: #605BA8;
     color: rgb(255, 255, 255);
 }
-#ordersection{
-    height: 100%;
-    margin-top: 1%;
-    margin-bottom: 1%;
-    margin-left: 2%;
-    margin-right: 2%;
-    padding: 2%;
+
+#order_section{
+    width: 503px;
+
+    height: -moz-calc(100% - 100px);
+    height: -webkit-calc(100% - 100px);
+    height: -o-calc(100% - 100px);
+    height: calc(100% - 100px);
 }
+
 .bottombar{
     bottom: 0;
     vertical-align: baseline
@@ -53,4 +55,4 @@ body{
     font-size  : .875rem;
     line-height  : .5;
     border-radius : .2rem;
-  }
+}
